prototypes/p1/tests/invalid/03_null_usage.hll
// Test: tentativo di usare null
// DEVE ESSERE RIFIUTATO: null non esiste nel linguaggio

struct Customer {
    name: String
}

fn main() {
    let c: Customer = null  // ERROR: 'null' is not a valid expression
}
